NEXT-504 - Refactor sw-page, fix search bar position with scrollbar, remove old sidebar search

--- a/src/Administration/Resources/administration/src/app/component/structure/sw-desktop/sw-desktop.less
+++ b/src/Administration/Resources/administration/src/app/component/structure/sw-desktop/sw-desktop.less
@@ -5,12 +5,4 @@
     height: 100%;
     width: 100%;
     overflow: hidden;
-
-    .sw-page__wrapper {
-        width: 100%;
-        height: 100%;
-        display: grid;
-        grid-template-rows: auto 1fr;
-        position: relative;
-    }
 }
